--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <header>
+  <!-- navbar section -->
     <nav>
         <div class="navbar bg-base-100">
             <div class="navbar-start">
@@ -34,11 +35,52 @@
           </div>
     </nav>
 </header>
-<main>
-    <section>
-
-    </section>
-
+<!-- banner section -->
+<main class="min-h-screen  ">
+  <section class="min-h-screen text-white flex justify-center items-center bg-[url(images/banner.png)] bg-no-repeat bg-center ">
+    <div class=" flex flex-col items-center gap-10">
+     <h1 class="text-6xl font-extrabold">End-to-End Travel with</h1>
+     <h2 class="text-6xl font-extrabold text-[#1DD100]"><span>P Paribahan</span></h2>
+     <p>Yes, you can run unit tests and view the results directly within the app. The integrated testing features allow for a streamlined .</p>
+     <button class="btn bg-[#1DD100] text-black border-0">Buy Tickets</button>
+    </div>
+ </section>
+ <section>
+        <h1 class=" text-xl font-bold text-center">Best offers for you</h1>
+  <div class=" mt-20">
+    <div class="flex justify-center gap-10">
+        <div class=" bg-[#FFBF0F] rounded-lg w-96 h-48 flex gap-5 justify-center items-center">
+          <div>
+            <h1 class="text-3xl font-extrabold">15% OFF</h1>
+            <h2 class="font-bold">on your next purchase</h2>
+            <h3 class="">use by January 2024</h3>
+          </div>
+            <img src="images/cupon-devider.png" alt="">
+          <div class="">
+          <h1 class="text-3xl font-extrabold">NEW15</h1>
+          <h2 class="">Coupon Code</h2>
+         </div> 
+      </div>
+      <div>
+        <div class=" bg-[#FFBF0F] rounded-lg w-96 h-48 flex gap-5 justify-center items-center">
+          <div>
+            <h1 class="text-3xl font-extrabold">15% OFF</h1>
+            <h2 class="font-bold">on your next purchase</h2>
+            <h3 class="">use by January 2024</h3>
+          </div>
+            <img src="images/cupon-devider.png" alt="">
+          <div class="">
+          <h1 class="text-3xl font-extrabold">NEW15</h1>
+          <h2 class="">Coupon Code</h2>
+         </div> 
+      </div>
+    </div>
+  </div>
+</div>
+<div class="flex justify-center mt-10">
+  <button class="btn btn btn-outline btn-success">See All Offers</button>
+</div>
+ </section>
 </main>
 
 
