--- a/index.html
+++ b/index.html
@@ -1,96 +1,143 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bus Ticket</title>
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
     <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body>
-<header>
-  <!-- navbar section -->
-    <nav>
+  </head>
+  <body>
+    <header>
+      <!-- navbar section -->
+      <nav>
         <div class="navbar bg-base-100">
-            <div class="navbar-start">
-              <div class="dropdown">
-                <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
-                  <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
-                </div>
-                
+          <div class="navbar-start">
+            <div class="dropdown">
+              <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-5 w-5"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M4 6h16M4 12h8m-8 6h16"
+                  />
+                </svg>
               </div>
-              <a class="btn btn-ghost text-xl">P-Ticket</a>
             </div>
-            <div class="navbar-center hidden lg:flex">
-              <ul class="menu menu-horizontal px-1">
-                <li><a>Home</a></li>
-                <li><a>About </a></li>
-                <li><a>Destination</a></li>
-                <li><a>Search </a></li>
-              </ul>
+            <a class="btn btn-ghost text-xl">P-Ticket</a>
+          </div>
+          <div class="navbar-center hidden lg:flex">
+            <ul class="menu menu-horizontal px-1">
+              <li><a>Home</a></li>
+              <li><a>About </a></li>
+              <li><a>Destination</a></li>
+              <li><a>Search </a></li>
+            </ul>
+          </div>
+          <div class="navbar-end">
+            <button class="btn btn-outline btn-success">
+              Bus <img src="images/bus-icon.png" alt="" />
+            </button>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <!-- banner section -->
+    <main class="min-h-screen">
+      <section
+        class="min-h-screen text-white flex justify-center items-center bg-[url(images/banner.png)] bg-no-repeat bg-center"
+      >
+        <div class="flex flex-col items-center gap-10">
+          <h1 class="text-6xl font-extrabold">End-to-End Travel with</h1>
+          <h2 class="text-6xl font-extrabold text-[#1DD100]">
+            <span>P Paribahan</span>
+          </h2>
+          <p>
+            Yes, you can run unit tests and view the results directly within the
+            app. The integrated testing features allow for a streamlined .
+          </p>
+          <button class="btn bg-[#1DD100] text-black border-0">
+            Buy Tickets
+          </button>
+        </div>
+      </section>
+      <section>
+        <h1 class="text-xl font-bold text-center">Best offers for you</h1>
+        <div class="mt-20">
+          <div class="flex justify-center gap-10 border-[2px] border-red-500">
+            <div
+              class="bg-[#FFBF0F] rounded-lg w-2/5 h-48 flex gap-5 justify-center items-center"
+            >
+              <div>
+                <h1 class="text-3xl font-extrabold">15% OFF</h1>
+                <h2 class="font-bold mt-2">on your next purchase</h2>
+                <h3 class="mt-2">use by January 2024</h3>
+              </div>
+              <img src="images/cupon-devider.png" alt="" />
+              <div class="">
+                <h1 class="text-3xl font-extrabold">NEW15</h1>
+                <h2 class="">Coupon Code</h2>
+              </div>
             </div>
-            <div class="navbar-end">
-              <button class="btn btn-outline btn-success">Bus <img src="images/bus-icon.png" alt=""></button>
+            <div
+              class="bg-[#F78C9C] rounded-lg w-2/5 h-48 flex gap-5 justify-center items-center"
+            >
+              <div>
+                <h1 class="text-3xl font-extrabold">20% OFF</h1>
+                <h2 class="font-bold mt-2">on your next purchase</h2>
+                <h3 class="mt-2">use by January 2024</h3>
+              </div>
+              <img src="images/cupon-devider.png" alt="" />
+              <div class="">
+                <h1 class="text-3xl font-extrabold">Couple 20</h1>
+                <h2 class="text-center mt-2">Coupon Code</h2>
+              </div>
             </div>
           </div>
-    </nav>
-</header>
-<!-- banner section -->
-<main class="min-h-screen  ">
-  <section class="min-h-screen text-white flex justify-center items-center bg-[url(images/banner.png)] bg-no-repeat bg-center ">
-    <div class=" flex flex-col items-center gap-10">
-     <h1 class="text-6xl font-extrabold">End-to-End Travel with</h1>
-     <h2 class="text-6xl font-extrabold text-[#1DD100]"><span>P Paribahan</span></h2>
-     <p>Yes, you can run unit tests and view the results directly within the app. The integrated testing features allow for a streamlined .</p>
-     <button class="btn bg-[#1DD100] text-black border-0">Buy Tickets</button>
-    </div>
- </section>
- <section>
-        <h1 class=" text-xl font-bold text-center">Best offers for you</h1>
-  <div class=" mt-20">
-    <div class="flex justify-center gap-10">
-        <div class=" bg-[#FFBF0F] rounded-lg w-96 h-48 flex gap-5 justify-center items-center">
-          <div>
-            <h1 class="text-3xl font-extrabold">15% OFF</h1>
-            <h2 class="font-bold">on your next purchase</h2>
-            <h3 class="">use by January 2024</h3>
+        </div>
+        <div class="flex justify-center mt-10">
+          <button class="btn btn btn-outline btn-success">
+            See All Offers
+          </button>
+        </div>
+      </section>
+      <!-- set boking  -->
+      <section>
+        <h1 class="text-center text-2xl font-bold mt-20">P.H Paribahan</h1>
+        <p class="text-center mt-5">
+          Yes, you can run unit tests and view the results directly within the
+          app. The integrated testing features allow for a streamlined .
+        </p>
+        <div class="flex justify-center mt-10">
+          <div
+            class="bg-[#FFBF0F] rounded-lg w-9/12 h-96 flex gap-5 justify-center items-center"
+          >
+            <div>
+              <h1 class="text-3xl font-extrabold">15% OFF</h1>
+              <h2 class="font-bold mt-2">on your next purchase</h2>
+              <h3 class="mt-2">use by January 2024</h3>
+            </div>
+            <img src="images/info-devider.png" alt="" />
+            <div class="">
+              <h1 class="text-3xl font-extrabold">NEW15</h1>
+              <h2 class="">Coupon Code</h2>
+            </div>
           </div>
-            <img src="images/cupon-devider.png" alt="">
-          <div class="">
-          <h1 class="text-3xl font-extrabold">NEW15</h1>
-          <h2 class="">Coupon Code</h2>
-         </div> 
-      </div>
-      <div>
-        <div class=" bg-[#FFBF0F] rounded-lg w-96 h-48 flex gap-5 justify-center items-center">
-          <div>
-            <h1 class="text-3xl font-extrabold">15% OFF</h1>
-            <h2 class="font-bold">on your next purchase</h2>
-            <h3 class="">use by January 2024</h3>
-          </div>
-            <img src="images/cupon-devider.png" alt="">
-          <div class="">
-          <h1 class="text-3xl font-extrabold">NEW15</h1>
-          <h2 class="">Coupon Code</h2>
-         </div> 
-      </div>
-    </div>
-  </div>
-</div>
-<div class="flex justify-center mt-10">
-  <button class="btn btn btn-outline btn-success">See All Offers</button>
-</div>
- </section>
-</main>
+        </div>
+      </section>
+    </main>
 
-
-<footer>
-
-</footer>
-
-
-
-    
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
