add tha set button

--- a/index.html
+++ b/index.html
@@ -121,18 +121,121 @@
         </p>
         <div class="flex justify-center mt-10">
           <div
-            class="bg-[#FFBF0F] rounded-lg w-9/12 h-96 flex gap-5 justify-center items-center"
+            class="bg-[#FFBF0F] rounded-lg w-9/12 h-96 flex justify-center gap-10"
           >
-            <div>
-              <h1 class="text-3xl font-extrabold">15% OFF</h1>
-              <h2 class="font-bold mt-2">on your next purchase</h2>
-              <h3 class="mt-2">use by January 2024</h3>
+            <div class="mt-3">
+              <h1 class="text-1xl font-extrabold mr-40">
+                <img
+                  class="w-8 float-start mt"
+                  src="images/bus-logo.png"
+                  alt=""
+                />
+                Greenline Paribahan
+              </h1>
             </div>
+            <div class="mt-3">
+              <button class="btn btn-outline btn-success">
+                <img class="float-start" src="images/seat-green.png" alt="" />
+                40 Seats left
+              </button>
+            </div>
+
             <img src="images/info-devider.png" alt="" />
-            <div class="">
-              <h1 class="text-3xl font-extrabold">NEW15</h1>
-              <h2 class="">Coupon Code</h2>
+            <div class="mt-20">
+              <img class="ml-10" src="images/fare.png" alt="" />
+              <h1 class="text-3xl font-extrabold text-center">550 Taka</h1>
+              <h2 class="text-center">Per Seat</h2>
             </div>
+          </div>
+        </div>
+      </section>
+      <!-- set boking 2 -->
+      <section class="mt-10 min-h-scree">
+        <div class="flex justify-around border-[2px] border-red-500 w-full">
+          <div class="w-1/2 border-[2px] border-r-lime-600">
+            <h1 class="font-bold mt-5">Select Your Seat</h1>
+            <button class="mt-5"><img class="float-start" src="images/seat-gray.png" alt=""> Available</button>
+
+            <div class="flex justify-end mr-4">
+              <div>
+                <h1 class="text-[#1DD100]"><img class="float-start" src="images/seat-green-filled.png" alt=""> Selected</h1> 
+                <hr class="font-bold" />
+              </div>
+            </div>
+            <div class="grid grid-cols-5 mt-5">
+             <h1>A</h1>
+              <button class="btn btn-sm w-20">A1</button>
+              <button class="btn btn-sm w-20">A2</button>
+              <button class="btn btn-sm w-20">A3</button>
+              <button class="btn btn-sm w-20">A4</button>
+            </div>
+            <div class="grid grid-cols-5 mt-5">
+              <h1>B</h1>
+               <button class="btn btn-sm w-20">B1</button>
+               <button class="btn btn-sm w-20">B2</button>
+               <button class="btn btn-sm w-20">B3</button>
+               <button class="btn btn-sm w-20">B4</button>
+             </div>
+             <div class="grid grid-cols-5 mt-5">
+              <h1>C</h1>
+               <button class="btn btn-sm w-20">C1</button>
+               <button class="btn btn-sm w-20">C2</button>
+               <button class="btn btn-sm w-20">C3</button>
+               <button class="btn btn-sm w-20">C4</button>
+             </div>
+             <div class="grid grid-cols-5 mt-5">
+              <h1>D</h1>
+               <button class="btn btn-sm w-20">D1</button>
+               <button class="btn btn-sm w-20">D2</button>
+               <button class="btn btn-sm w-20">D3</button>
+               <button class="btn btn-sm w-20">D4</button>
+             </div>
+             <div class="grid grid-cols-5 mt-5">
+              <h1>E</h1>
+               <button class="btn btn-sm w-20">E1</button>
+               <button class="btn btn-sm w-20">E2</button>
+               <button class="btn btn-sm w-20">E3</button>
+               <button class="btn btn-sm w-20">E4</button>
+             </div>
+             <div class="grid grid-cols-5 mt-5">
+              <h1>F</h1>
+               <button class="btn btn-sm w-20">F1</button>
+               <button class="btn btn-sm w-20">F2</button>
+               <button class="btn btn-sm w-20">F3</button>
+               <button class="btn btn-sm w-20">F4</button>
+             </div>
+             <div class="grid grid-cols-5 mt-5">
+              <h1>G</h1>
+               <button class="btn btn-sm w-20">G1</button>
+               <button class="btn btn-sm w-20">G2</button>
+               <button class="btn btn-sm w-20">G3</button>
+               <button class="btn btn-sm w-20">G4</button>
+             </div>
+             <div class="grid grid-cols-5 mt-5">
+              <h1>H</h1>
+               <button class="btn btn-sm w-20">H1</button>
+               <button class="btn btn-sm w-20">H2</button>
+               <button class="btn btn-sm w-20">H3</button>
+               <button class="btn btn-sm w-20">H4</button>
+             </div>
+             <div class="grid grid-cols-5 mt-5">
+              <h1>I</h1>
+               <button class="btn btn-sm w-20">I1</button>
+               <button class="btn btn-sm w-20">I2</button>
+               <button class="btn btn-sm w-20">I3</button>
+               <button class="btn btn-sm w-20">I4</button>
+             </div>
+             <div class="grid grid-cols-5 mt-5">
+              <h1>J</h1>
+               <button class="btn btn-sm w-20">J1</button>
+               <button class="btn btn-sm w-20">J2</button>
+               <button class="btn btn-sm w-20">J3</button>
+               <button class="btn btn-sm w-20">J4</button>
+             </div>
+          </div>
+          
+          <div>
+            <h1>Select Your Seat</h1>
           </div>
         </div>
       </section>
