add new calculate input fild

--- a/index.html
+++ b/index.html
@@ -154,88 +154,132 @@
         <div class="flex justify-around border-[2px] border-red-500 w-full">
           <div class="w-1/2 border-[2px] border-r-lime-600">
             <h1 class="font-bold mt-5">Select Your Seat</h1>
-            <button class="mt-5"><img class="float-start" src="images/seat-gray.png" alt=""> Available</button>
+            <button class="mt-5">
+              <img class="float-start" src="images/seat-gray.png" alt="" />
+              Available
+            </button>
 
             <div class="flex justify-end mr-4">
               <div>
-                <h1 class="text-[#1DD100]"><img class="float-start" src="images/seat-green-filled.png" alt=""> Selected</h1> 
+                <h1 class="text-[#1DD100]">
+                  <img
+                    class="float-start"
+                    src="images/seat-green-filled.png"
+                    alt=""
+                  />
+                  Selected
+                </h1>
                 <hr class="font-bold" />
               </div>
             </div>
             <div class="grid grid-cols-5 mt-5">
-             <h1>A</h1>
-              <button class="btn btn-sm w-20">A1</button>
-              <button class="btn btn-sm w-20">A2</button>
-              <button class="btn btn-sm w-20">A3</button>
-              <button class="btn btn-sm w-20">A4</button>
+              <h1>A</h1>
+              <button class="add-btn btn btn-sm w-20">A1</button>
+              <button class="add-btn btn btn-sm w-20">A2</button>
+              <button class="add-btn btn btn-sm w-20">A3</button>
+              <button class="add-btn btn btn-sm w-20">A4</button>
             </div>
             <div class="grid grid-cols-5 mt-5">
               <h1>B</h1>
-               <button class="btn btn-sm w-20">B1</button>
-               <button class="btn btn-sm w-20">B2</button>
-               <button class="btn btn-sm w-20">B3</button>
-               <button class="btn btn-sm w-20">B4</button>
-             </div>
-             <div class="grid grid-cols-5 mt-5">
+              <button class="add-btn btn btn-sm w-20">B1</button>
+              <button class="add-btn btn btn-sm w-20">B2</button>
+              <button class="add-btn btn btn-sm w-20">B3</button>
+              <button class="add-btn btn btn-sm w-20">B4</button>
+            </div>
+            <div class="grid grid-cols-5 mt-5">
               <h1>C</h1>
-               <button class="btn btn-sm w-20">C1</button>
-               <button class="btn btn-sm w-20">C2</button>
-               <button class="btn btn-sm w-20">C3</button>
-               <button class="btn btn-sm w-20">C4</button>
-             </div>
-             <div class="grid grid-cols-5 mt-5">
+              <button class="add-btn btn btn-sm w-20">C1</button>
+              <button class="add-btn btn btn-sm w-20">C2</button>
+              <button class="add-btn btn btn-sm w-20">C3</button>
+              <button class="add-btn btn btn-sm w-20">C4</button>
+            </div>
+            <div class="grid grid-cols-5 mt-5">
               <h1>D</h1>
-               <button class="btn btn-sm w-20">D1</button>
-               <button class="btn btn-sm w-20">D2</button>
-               <button class="btn btn-sm w-20">D3</button>
-               <button class="btn btn-sm w-20">D4</button>
-             </div>
-             <div class="grid grid-cols-5 mt-5">
+              <button class="add-btn btn btn-sm w-20">D1</button>
+              <button class="add-btn btn btn-sm w-20">D2</button>
+              <button class="add-btn btn btn-sm w-20">D3</button>
+              <button class="add-btn btn btn-sm w-20">D4</button>
+            </div>
+            <div class="grid grid-cols-5 mt-5">
               <h1>E</h1>
-               <button class="btn btn-sm w-20">E1</button>
-               <button class="btn btn-sm w-20">E2</button>
-               <button class="btn btn-sm w-20">E3</button>
-               <button class="btn btn-sm w-20">E4</button>
-             </div>
-             <div class="grid grid-cols-5 mt-5">
+              <button class="add-btn btn btn-sm w-20">E1</button>
+              <button class="add-btn btn btn-sm w-20">E2</button>
+              <button class="add-btn btn btn-sm w-20">E3</button>
+              <button class="add-btn btn btn-sm w-20">E4</button>
+            </div>
+            <div class="grid grid-cols-5 mt-5">
               <h1>F</h1>
-               <button class="btn btn-sm w-20">F1</button>
-               <button class="btn btn-sm w-20">F2</button>
-               <button class="btn btn-sm w-20">F3</button>
-               <button class="btn btn-sm w-20">F4</button>
-             </div>
-             <div class="grid grid-cols-5 mt-5">
+              <button class="add-btn btn btn-sm w-20">F1</button>
+              <button class="add-btn btn btn-sm w-20">F2</button>
+              <button class="add-btn btn btn-sm w-20">F3</button>
+              <button class="add-btn btn btn-sm w-20">F4</button>
+            </div>
+            <div class="grid grid-cols-5 mt-5">
               <h1>G</h1>
-               <button class="btn btn-sm w-20">G1</button>
-               <button class="btn btn-sm w-20">G2</button>
-               <button class="btn btn-sm w-20">G3</button>
-               <button class="btn btn-sm w-20">G4</button>
-             </div>
-             <div class="grid grid-cols-5 mt-5">
+              <button class="add-btn btn btn-sm w-20">G1</button>
+              <button class="add-btn btn btn-sm w-20">G2</button>
+              <button class="add-btn btn btn-sm w-20">G3</button>
+              <button class="add-btn btn btn-sm w-20">G4</button>
+            </div>
+            <div class="grid grid-cols-5 mt-5">
               <h1>H</h1>
-               <button class="btn btn-sm w-20">H1</button>
-               <button class="btn btn-sm w-20">H2</button>
-               <button class="btn btn-sm w-20">H3</button>
-               <button class="btn btn-sm w-20">H4</button>
-             </div>
-             <div class="grid grid-cols-5 mt-5">
+              <button class="add-btn btn btn-sm w-20">H1</button>
+              <button class="add-btn btn btn-sm w-20">H2</button>
+              <button class="add-btn btn btn-sm w-20">H3</button>
+              <button class="add-btn btn btn-sm w-20">H4</button>
+            </div>
+            <div class="grid grid-cols-5 mt-5">
               <h1>I</h1>
-               <button class="btn btn-sm w-20">I1</button>
-               <button class="btn btn-sm w-20">I2</button>
-               <button class="btn btn-sm w-20">I3</button>
-               <button class="btn btn-sm w-20">I4</button>
-             </div>
-             <div class="grid grid-cols-5 mt-5">
+              <button class="add-btn btn btn-sm w-20">I1</button>
+              <button class="add-btn btn btn-sm w-20">I2</button>
+              <button class="add-btn btn btn-sm w-20">I3</button>
+              <button class="add-btn btn btn-sm w-20">I4</button>
+            </div>
+            <div class="grid grid-cols-5 mt-5">
               <h1>J</h1>
-               <button class="btn btn-sm w-20">J1</button>
-               <button class="btn btn-sm w-20">J2</button>
-               <button class="btn btn-sm w-20">J3</button>
-               <button class="btn btn-sm w-20">J4</button>
-             </div>
+              <button class="add-btn btn btn-sm w-20">J1</button>
+              <button class="add-btn btn btn-sm w-20">J2</button>
+              <button class="add-btn btn btn-sm w-20">J3</button>
+              <button class="add-btn btn btn-sm w-20">J4</button>
+            </div>
           </div>
-          
-          <div>
-            <h1>Select Your Seat</h1>
+
+          <div class="">
+            <h1 class="text-center text-2xl mr-10 font-bold">
+              Select Your Seat
+            </h1>
+            <div class="grid grid-cols-3 mt-10 gap-10">
+              <h1 class="font-bold text-xl">Seat</h1>
+              <h1 class="font-bold text-xl">Class</h1>
+              <h1 class="font-bold text-xl">Price</h1>
+            </div>
+            <br>
+            <hr />
+            <div class="grid grid-cols-3 mt-10 gap-10">
+              <h1>C2</h1>
+              <h1>Economoy</h1>
+              <h1>550</h1>
+            </div>
+            <div class="grid grid-cols-3 mt-10 gap-10">
+              <h1>C2</h1>
+              <h1>Economoy</h1>
+              <h1>550</h1>
+            </div>
+            <br>
+            <hr />
+            <br>
+            <div class="flex justify-between">
+              <h1 class="font-bold text-xl">Total Price</h1>
+              <h1 class="font-bold text-xl">BDT 1100</h1>
+            </div>
+            <div class="mt-6">
+              <input type="text" placeholder="Have any copupon?">
+              <button class= "btn bg-[#1DD100] text-white ml-10">Apply</button>
+            </div>
+            <div class="flex justify-between mt-5">
+              <h1 class="font-bold text-xl">Grand Total</h1>
+              <h1 class="font-bold text-xl">BDT 1100</h1>
+            </div>
           </div>
         </div>
       </section>
