--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
       </section>
       <!-- set boking  -->
       <section>
+       <div class="border-[2px] border-[#1DD100] rounded-3xl w-full bg-[#F7F8F8] mt-3">
         <h1 class="text-center text-2xl font-bold mt-20">P.H Paribahan</h1>
         <p class="text-center mt-5">
           Yes, you can run unit tests and view the results directly within the
@@ -121,7 +122,7 @@
         </p>
         <div class="flex justify-center mt-10">
           <div
-            class="bg-[#FFBF0F] rounded-lg w-9/12 h-96 flex justify-center gap-10"
+            class=" bg-[#F7F8F8] rounded-lg w-9/12 h-96 flex justify-center gap-10"
           >
             <div class="mt-3">
               <h1 class="text-1xl font-extrabold mr-40">
@@ -151,8 +152,8 @@
       </section>
       <!-- set boking 2 -->
       <section class="mt-10 min-h-scree">
-        <div class="flex justify-around border-[2px] border-red-500 w-full">
-          <div class="w-1/2 border-[2px] border-r-lime-600">
+        <div class="flex justify-around border-[2px] border-[#1DD100] rounded-3xl w-full bg-[#F7F8F8]">
+          <div class="w-1/2 border-r-lime-600">
             <h1 class="font-bold mt-5">Select Your Seat</h1>
             <button class="mt-5">
               <img class="float-start" src="images/seat-gray.png" alt="" />
@@ -161,7 +162,7 @@
 
             <div class="flex justify-end mr-4">
               <div>
-                <h1 class="text-[#1DD100]">
+                <h1 class="text-[#1DD100] mb-4">
                   <img
                     class="float-start"
                     src="images/seat-green-filled.png"
@@ -245,7 +246,7 @@
           </div>
 
           <div class="">
-            <h1 class="text-center text-2xl mr-10 font-bold">
+            <h1 class="text-center text-2xl mr-10 font-bold mt-5">
               Select Your Seat
             </h1>
             <div class="grid grid-cols-3 mt-10 gap-10">
@@ -253,7 +254,7 @@
               <h1 class="font-bold text-xl">Class</h1>
               <h1 class="font-bold text-xl">Price</h1>
             </div>
-            <br>
+            <br />
             <hr />
             <div class="grid grid-cols-3 mt-10 gap-10">
               <h1>C2</h1>
@@ -265,23 +266,55 @@
               <h1>Economoy</h1>
               <h1>550</h1>
             </div>
-            <br>
+            <br />
             <hr />
-            <br>
+            <br />
             <div class="flex justify-between">
               <h1 class="font-bold text-xl">Total Price</h1>
               <h1 class="font-bold text-xl">BDT 1100</h1>
             </div>
             <div class="mt-6">
-              <input type="text" placeholder="Have any copupon?">
-              <button class= "btn bg-[#1DD100] text-white ml-10">Apply</button>
+              <input type="text" placeholder="Have any copupon?" />
+              <button class="btn bg-[#1DD100] text-white ml-10">Apply</button>
             </div>
             <div class="flex justify-between mt-5">
               <h1 class="font-bold text-xl">Grand Total</h1>
               <h1 class="font-bold text-xl">BDT 1100</h1>
             </div>
+            <div class="mt-5">
+              <h1 class="font-bold">Passenger Name*</h1>
+              <label class="input input-bordered flex items-center gap-2 mt-3">
+                <input type="text" class="grow" placeholder="Enter your name" />
+              </label>
+
+              <h1 class="font-bold mt-2">Phone Number*</h1>
+              <label class="input input-bordered flex items-center gap-2 mt-3">
+                <input
+                  type="text"
+                  class="grow"
+                  placeholder="Enter your phone number"
+                />
+              </label>
+
+              <h1 class="font-bold mt-2">Email ID</h1>
+              <label class="input input-bordered flex items-center gap-2 mt-3">
+                <input
+                  type="text"
+                  class="grow"
+                  placeholder="Enter your email id"
+                />
+              </label>
+              <button class="btn bg-[#1DD100] text-white w-full mt-3">
+                Next
+              </button>
+            </div>
+            <div class="flex gap-5 mt-3">
+              <a href="">Terms and Conditions</a>
+              <a href="">Cancellation Policy</a>
+            </div>
           </div>
         </div>
+       </div>
       </section>
     </main>
 
