--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
               </h1>
             </div>
             <div class="mt-3">
-              <button class="btn btn-outline btn-success">
+              <button id="seat-left" class="btn btn-outline btn-success">
                 <img class="float-start" src="images/seat-green.png" alt="" />
                 40 Seats left
               </button>
@@ -144,7 +144,7 @@
             <img src="images/info-devider.png" alt="" />
             <div class="mt-20">
               <img class="ml-10" src="images/fare.png" alt="" />
-              <h1 class="text-3xl font-extrabold text-center">550 Taka</h1>
+              <h1 class="text-3xl font-extrabold text-center"> <span id="price">550 </span> Taka</h1>
               <h2 class="text-center">Per Seat</h2>
             </div>
           </div>
@@ -162,7 +162,7 @@
 
             <div class="flex justify-end mr-4">
               <div>
-                <h1 class="text-[#1DD100] mb-4">
+                <h1 class="text-[#1DD100] mb-5">
                   <img
                     class="float-start"
                     src="images/seat-green-filled.png"
@@ -250,28 +250,26 @@
               Select Your Seat
             </h1>
             <div class="grid grid-cols-3 mt-10 gap-10">
-              <h1 class="font-bold text-xl">Seat</h1>
+              <h1 class="font-bold text-xl">Seat <span id="seat-count">0</span></h1>
               <h1 class="font-bold text-xl">Class</h1>
               <h1 class="font-bold text-xl">Price</h1>
             </div>
             <br />
             <hr />
-            <div class="grid grid-cols-3 mt-10 gap-10">
-              <h1>C2</h1>
-              <h1>Economoy</h1>
-              <h1>550</h1>
+            <div id="Selected-div" class="grid grid-cols-3 mt-10 gap-10">
+            
             </div>
             <div class="grid grid-cols-3 mt-10 gap-10">
-              <h1>C2</h1>
+              <!-- <h1>C2</h1>
               <h1>Economoy</h1>
-              <h1>550</h1>
+              <h1>550</h1> -->
             </div>
             <br />
             <hr />
             <br />
             <div class="flex justify-between">
               <h1 class="font-bold text-xl">Total Price</h1>
-              <h1 class="font-bold text-xl">BDT 1100</h1>
+              <h1 class="font-bold text-xl">BDT <span id="total-price">0</span></h1>
             </div>
             <div class="mt-6">
               <input type="text" placeholder="Have any copupon?" />
@@ -279,7 +277,7 @@
             </div>
             <div class="flex justify-between mt-5">
               <h1 class="font-bold text-xl">Grand Total</h1>
-              <h1 class="font-bold text-xl">BDT 1100</h1>
+              <h1 class="font-bold text-xl">BDT <span id="grand-total">0</span></h1>
             </div>
             <div class="mt-5">
               <h1 class="font-bold">Passenger Name*</h1>
