--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
               </h1>
             </div>
             <div class="mt-3">
-              <button id="seat-left" class="btn btn-outline btn-success">
+              <button id="" class="btn btn-outline btn-success">
                 <img class="float-start" src="images/seat-green.png" alt="" />
-                40 Seats left
+                <span id="seat-left">40</span> Seats left
               </button>
             </div>
 
@@ -155,10 +155,10 @@
         <div class="flex justify-around border-[2px] border-[#1DD100] rounded-3xl w-full bg-[#F7F8F8]">
           <div class="w-1/2 border-r-lime-600">
             <h1 class="font-bold mt-5">Select Your Seat</h1>
-            <button class="mt-5">
+            <h1 id="Available" class="mt-5">
               <img class="float-start" src="images/seat-gray.png" alt="" />
               Available
-            </button>
+            </h1>
 
             <div class="flex justify-end mr-4">
               <div>
