add valid total price

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
             </div>
             <div class="mt-6">
               <input type="text" placeholder="Have any copupon?" />
-              <button class="btn bg-[#1DD100] text-white ml-10">Apply</button>
+              <button id="apply-Coupon" onclick="updateGrandTotal('apply-Coupon')" class="btn apply-Coupon bg-[#1DD100] text-white ml-10">Apply</button>
             </div>
             <div class="flex justify-between mt-5">
               <h1 class="font-bold text-xl">Grand Total</h1>
@@ -316,7 +316,22 @@
        </div>
       </section>
     </main>
-
+    <section class="flex justify-center items-center mt-20 hidden">
+        <div class=" w-1/3 h-96 border-2 border-white bg-[#F7F8F8] rounded-xl">
+            <div class="flex justify-center mt-10">
+                <div>
+                    <img class="ml-48" src="images/success.png" alt="">
+                    <h1 class=" text-center mt-5 mr-8 text-[#1DD100] font-extrabold">SUCCESS</h1>
+                    <p class="text-center text-xs mt-5 font-bold">Thank you for Booking Our Bus Seats. 
+                        We are working hard to find the best service and deals for you.</p>
+                        <p class="text-center text-xs mt-3">Shortly you will find a confirmation in your email.</p>
+                        <div class="flex justify-center mt-5">
+                            <button class="btn btn-success  bg-[#1DD100] border-0 w-44 text-white">Continue</button>
+                        </div>
+                </div>
+            </div>
+        </div>
+      </section>
     <script src="script.js"></script>
   </body>
 </html>
